--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-notification",
+  "name": "@ambiere/react-notification",
   "version": "0.0.1",
   "repository": {
     "type": "git",
